--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ header div h1 {
   text-align: center;
   font-family: "Courier New", sans-serif;
   font-weight: 50;
+  height: 20px;
 
 }
 
@@ -21,7 +22,7 @@ header div {
 
 /* Main content section */
 
-section div h2 {
+section div h2, h3 {
 
   background-color: black;
   color: white;
